--- a/Documentation/Languages/frFR.xaml
+++ b/Documentation/Languages/frFR.xaml
@@ -219,6 +219,10 @@
     <system:String x:Key="String3">Une exception a été levée lors de la création du fichier de configuration.</system:String>
     <system:String x:Key="String4">Indiquez si vous souhaitez modifier l'ID de l'icône simple ou l'ID de l'icône active.</system:String>
     <system:String x:Key="String5">Un seul sort peut être sélectionné à la fois.</system:String>
+	<system:String x:Key="ExportCheckedFiles">Export checked to DBC Files</system:String>
+	<system:String x:Key="ExportCheckedFilesMpq">Export checked to MPQ</system:String>
+	<system:String x:Key="ExportMpqName">MPQ name:</system:String>
+	<system:String x:Key="TablesToExport">Select which SQL tables you wish to export.</system:String>
 	
 	<!--#region visual tab -->
 	<system:String xml:space="preserve" x:Key="VisualDeleteListEntryConfirm">CONFIRM DELETE:&#10;This change is&#10;saved immediately</system:String>
