--- a/SpellGUIV2/ImportExportWindow.xaml
+++ b/SpellGUIV2/ImportExportWindow.xaml
@@ -35,11 +35,11 @@
                         <RowDefinition Height="AUTO"/>
                         <RowDefinition Height="AUTO"/>
                     </Grid.RowDefinitions>
-                    <Button Content="Export checked to DBC Files" Margin="10" Click="ExportClick" Grid.Row="0" Grid.Column="0"/>
-                    <Button Content="Export checked to MPQ" Margin="10" Click="MpqClick" Grid.Row="0" Grid.Column="1"/>
-                    <Label Content="MPQ name:" HorizontalAlignment="Right" Margin="5" Grid.Row="1" Grid.Column="0"/>
+                    <Button Content="{DynamicResource ExportCheckedFiles}" Margin="10" Click="ExportClick" Grid.Row="0" Grid.Column="0"/>
+                    <Button Content="{DynamicResource ExportCheckedFilesMpq}" Margin="10" Click="MpqClick" Grid.Row="0" Grid.Column="1"/>
+                    <Label Content="{DynamicResource ExportMpqName}" HorizontalAlignment="Right" Margin="5" Grid.Row="1" Grid.Column="0"/>
                     <TextBox Name="ExportMpqNameTxt" Text="patch-4.mpq" Margin="10,5,10,5" Grid.Row="1" Grid.Column="1"/>
-                    <Label Content="Select which SQL tables you wish to export." Margin="5" Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2"/>
+                    <Label Content="{DynamicResource TablesToExport}" Margin="5" Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2"/>
                     <UniformGrid Name="ExportGridDbcs" Columns="1" Grid.Row="3" Grid.RowSpan="2" Grid.Column="0" Grid.ColumnSpan="2"/>
                 </Grid>
             </TabItem>
