Remove disabled experimental window resizing code

--- a/SpellGUIV2/MainWindow.xaml
+++ b/SpellGUIV2/MainWindow.xaml
@@ -11,8 +11,7 @@
         WindowStartupLocation="CenterScreen"
         Icon="icon.ico"
         KeyDown="_KeyDown"
-        Loaded="_Loaded"
-        SizeChanged="window_SizeChanged">
+        Loaded="_Loaded">
     <controls:MetroWindow.Resources>
         <ResourceDictionary>
             <Style TargetType="c:ThreadSafeComboBox" BasedOn="{StaticResource {x:Type ComboBox}}"/>
