Add the ability to filter by spell effect aura name

--- a/Documentation/Languages/enUS.xaml
+++ b/Documentation/Languages/enUS.xaml
@@ -8,6 +8,7 @@
     <system:String x:Key="labGoToSpell">Go to spell id:</system:String>
     <system:String x:Key="labFilterBtName">Filter by name:</system:String>
 	<system:String x:Key="labFilterByEffect">Filter by spell effect:</system:String>
+	<system:String x:Key="labFilterByAura">Filter by spell aura:</system:String>
     <system:String x:Key="tabEnglish">English</system:String>
     <system:String x:Key="tabKorean">Korean</system:String>
     <system:String x:Key="tabFrench">French</system:String>
