--- a/Documentation/Languages/zhCN.xaml
+++ b/Documentation/Languages/zhCN.xaml
@@ -8,6 +8,7 @@
     <system:String x:Key="labGoToSpell">跳转到技能:</system:String>
     <system:String x:Key="labFilterBtName">根据名字筛选:</system:String>
 	<system:String x:Key="labFilterByEffect">Filter by spell effect:</system:String>
+	<system:String x:Key="labFilterByAura">Filter by spell aura:</system:String>
     <system:String x:Key="tabEnglish">英语</system:String>
     <system:String x:Key="tabKorean">韩语</system:String>
     <system:String x:Key="tabFrench">法语</system:String>
